--- a/patitasbog-frontend/src/styles/Navbar.css
+++ b/patitasbog-frontend/src/styles/Navbar.css
@@ -1,28 +1,8 @@
-:root {
-  /* Colores */
-  --color-bg-nav: #f0efe7;
-  --color-bg-bottom: #f1ca99;
-  --color-highlight: #c71c5e;
-  --color-dark: #281d04;
-  /* Tipografía */
-  --font-logo: "Aventi", sans-serif;
-  --font-main: "Satoshi", sans-serif;
-  /* Tamaños de fuente */
-  --fs-base: 1rem; /* 16px */
-  --fs-link: 1.5rem; /* 24px */
-  --fs-logo: 2.5rem; /* 64px */
-  /* Espaciados */
-  --spacing-1: 1rem;
-  --spacing-2: 2rem;
-  --spacing-3: 3rem;
-  --spacing-4: 6px;
-}
-
 /* Navbar */
 .navbar {
   width: auto;
   height: 10%;
-  background-color: var(--color-bg-nav);
+  background-color: var(--color-neutro-1);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -49,7 +29,7 @@
 .logo-text {
   font-family: var(--font-logo);
   font-size: clamp(1.5rem, 4vw, var(--fs-logo));
-  color: var(--color-highlight);
+  color: var(--color-principal-3);
   font-weight: 700;
   font-style: bold;
   text-decoration: none;
@@ -76,7 +56,7 @@
 .hamburger-line {
   width: 30px;
   height: 3px;
-  background-color: var(--color-highlight);
+  background-color: var(--color-principal-3);
   border-radius: 2px;
   transition: all 0.3s ease;
   transform-origin: center;
@@ -107,7 +87,7 @@
   font-weight: 900;
   font-family: var(--font-main);
   text-decoration: none;
-  color: var(--color-highlight);
+  color: var(--color-principal-3);
   background: none;
   border: none;
   font-style: bold;
@@ -129,7 +109,7 @@
   display: inline-block;
   width: 2px;
   height: 1.5em;
-  background-color: var(--color-highlight);
+  background-color: var(--color-principal-3);
   vertical-align: middle;
   margin-left: var(--spacing-1);
   margin-right: var(--spacing-1);
@@ -142,7 +122,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: var(--color-bg-nav);
+  background-color: var(--color-neutro-1);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -172,7 +152,7 @@
   font-weight: 900;
   font-family: var(--font-main);
   text-decoration: none;
-  color: var(--color-highlight);
+  color: var(--color-principal-3);
   background: none;
   border: none;
   cursor: pointer;
