--- a/patitasbog-frontend/src/styles/SignUp.module.css
+++ b/patitasbog-frontend/src/styles/SignUp.module.css
@@ -359,9 +359,27 @@
   text-align: center;
 }
 
-.o {
-  text-align: center;
+
+.oSeparator {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacing-1); 
+    padding: var(--spacing-1) 0;
+    align-items: center;
+    width: 100%;
 }
+
+.o{
+    margin: 0;
+    line-height: 1;
+}
+
+.horizontalLine {                  
+    flex: 1;  
+    width: 100%;              
+    border: 1px solid var(--color-neutro-3);
+}
+
 
 /* Texto de volver */
 .backTextContainer {
@@ -638,7 +656,7 @@
   }
 
   .patitasCardContent {
-    gap: 1rem;
+    gap: var(--spacing-2);
   }
 
   .patitasSigninSection {
